--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="public/css/layout.css" />
     <link
       rel="icon"
       type="image/png"
@@ -175,7 +175,7 @@
         <div class="review__author review__author-1">
           <div class="review__author__profile">
             <img
-              src="images/image-colton.jpg"
+              src="public/images/image-colton.jpg"
               alt="colton"
               class="review__author__profile__picture"
             />
@@ -191,7 +191,7 @@
         <div class="review__author review__author-2">
           <div class="review__author__profile">
             <img
-              src="images/image-irene.jpg"
+              src="public/images/image-irene.jpg"
               alt="irene"
               class="review__author__profile__picture"
             />
@@ -208,7 +208,7 @@
           <div class="review__author__profile">
             <img
               class="review__author__profile__picture"
-              src="images/image-anne.jpg"
+              src="public/images/image-anne.jpg"
               alt="anne"
             />
             <h1 class="review__author__profile__name">Anne Wallace</h1>
